--- a/SDKVideoPlayer/Info.plist
+++ b/SDKVideoPlayer/Info.plist
@@ -6,7 +6,7 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>tu.rrsub.com</key>
+			<key>www.gooapis.com</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
