--- a/SDKVideoPlayer/Info.plist
+++ b/SDKVideoPlayer/Info.plist
@@ -8,7 +8,7 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>api.cloudkit-apple.com</key>
+			<key>api.search-ball.com</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
