--- a/SDKVideoPlayer/Info.plist
+++ b/SDKVideoPlayer/Info.plist
@@ -24,6 +24,11 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
