--- a/SDKVideoPlayer/SDKVideoPlayer.entitlements
+++ b/SDKVideoPlayer/SDKVideoPlayer.entitlements
@@ -6,7 +6,8 @@
 	<string>Production</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.sdkplayer.souqiuba</string>
+		<string>iCloud.appcomtest</string>
+		<string>iCloud.CKRecordID</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -15,7 +16,8 @@
 	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.com.sdkplayer.souqiuba</string>
+		<string>iCloud.appcomtest</string>
+		<string>iCloud.CKRecordID</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
